--- a/templates/menu.html
+++ b/templates/menu.html
@@ -39,8 +39,8 @@
                   </a>
                 </li>
                 <li class='nav-item' title='Registro nuevo docente' style='color:green'>
-                  <a class='nav-link text-primary btn btn-outline-info' href='/cerrar'>
-                    Registrar Docentes
+                  <a class='nav-link text-primary btn btn-outline-info' href='/FormDocente'>
+                    Registro de Docente
                   </a>
                 </li>
                 <li class='nav-item' title='Registro nueva asignatura' style='color:green'>
