--- a/templates/menu.html
+++ b/templates/menu.html
@@ -44,7 +44,7 @@
                   </a>
                 </li>
                 <li class='nav-item' title='Registro nueva asignatura' style='color:green'>
-                  <a class='nav-link text-primary btn btn-outline-info' href='/cerrar'>
+                  <a class='nav-link text-primary btn btn-outline-info' href='/FormAsig'>
                     Registrar Asignatura
                   </a>
                 </li>
