--- a/templates/menu.html
+++ b/templates/menu.html
@@ -48,6 +48,19 @@
                     Registrar Asignatura
                   </a>
                 </li>
+
+                <li class='nav-item' title='Registro nueva transferencia a otra universidad' style='color:green'>
+                  <a class='nav-link text-primary btn btn-outline-info' href='/FormTranferirO'>
+                    Registro transferencia a otra universidad
+                  </a>
+                </li>
+
+                <li class='nav-item' title='Registro nueva transferencia de otra universidad' style='color:green'>
+                  <a class='nav-link text-primary btn btn-outline-info' href='/FormTranferirD'>
+                    Registro transferencia de otra universidad
+                  </a>
+                </li>
+
               </ul>
             </li>
           {% endif %}
