--- a/templates/menu.html
+++ b/templates/menu.html
@@ -33,6 +33,11 @@
                     Registrar Carrera
                   </a>
                 </li>
+                <li class='nav-item' title='Registro de estudiante' style='color:green'>
+                  <a class='nav-link text-primary btn btn-outline-info' href='/FormEstudiante'>
+                    Registrar Estudiante
+                  </a>
+                </li>
                 <li class='nav-item' title='Registro nuevo plan curricular' style='color:green'>
                   <a class='nav-link text-primary btn btn-outline-info' href='/cerrar'>
                     Registrar plan de estudio
@@ -57,7 +62,7 @@
 
                 <li class='nav-item' title='Registro nueva transferencia de otra universidad' style='color:green'>
                   <a class='nav-link text-primary btn btn-outline-info' href='/FormTranferirD'>
-                    Registro transferencia de otra universidad
+                    Registro transferencia de otras universidades
                   </a>
                 </li>
 
