--- a/templates/menu.html
+++ b/templates/menu.html
@@ -35,7 +35,7 @@
                 </li>
                 <li class='nav-item' title='Registro de estudiante' style='color:green'>
                   <a class='nav-link text-primary btn btn-outline-info' href='/FormEstudiante'>
-                    Registrar Estudiante
+                    Reg. Estudiante
                   </a>
                 </li>
                 <li class='nav-item' title='Registro nuevo plan curricular' style='color:green'>
@@ -45,24 +45,29 @@
                 </li>
                 <li class='nav-item' title='Registro nuevo docente' style='color:green'>
                   <a class='nav-link text-primary btn btn-outline-info' href='/FormDocente'>
-                    Registro de Docente
+                    Reg. de Docente
                   </a>
                 </li>
                 <li class='nav-item' title='Registro nueva asignatura' style='color:green'>
                   <a class='nav-link text-primary btn btn-outline-info' href='/FormAsig'>
-                    Registrar Asignatura
+                    Reg. Asignatura
                   </a>
                 </li>
 
+                <li class='nav-item' title='Registro de modalidad de titulación' style='color:green'>
+                  <a class='nav-link text-primary btn btn-outline-info' href='/FormModalidad'>
+                    Reg. modalidad de titulación
+                  </a>
+                </li>
                 <li class='nav-item' title='Registro nueva transferencia a otra universidad' style='color:green'>
                   <a class='nav-link text-primary btn btn-outline-info' href='/FormTranferirO'>
-                    Registro transferencia a otra universidad
+                    Reg. transferencia a otra universidad
                   </a>
                 </li>
 
                 <li class='nav-item' title='Registro nueva transferencia de otra universidad' style='color:green'>
                   <a class='nav-link text-primary btn btn-outline-info' href='/FormTranferirD'>
-                    Registro transferencia de otras universidades
+                    Reg. transferencia de otras universidades
                   </a>
                 </li>
 
