--- a/templates/registroDocente.html
+++ b/templates/registroDocente.html
@@ -141,6 +141,10 @@
           }
             //retorno1(data);
           validarError();
+        },
+        error: function() {
+          $('#error').html("<div class='alert alert-danger'>Ocurrio un error Verifique los datos</div>");
+            vaciar();
         }
       });
     }
