--- a/templates/menu.html
+++ b/templates/menu.html
@@ -29,45 +29,50 @@
               <ul class='dropdown-menu' aria-labelledby='navbarDropdown2'>
                 <li><hr class='dropdown-divider'></li>
                 <li class='nav-item' title='Registro nuevo de carrera' style='color:green'>
-                  <a class='nav-link text-primary btn btn-outline-info' href='/FormCarrera'>
+                  <a class='nav-link text-primary btn btn-outline-info' href='/FormCarrera'style='color:green;font-size:12px'>
                     Registrar Carrera
                   </a>
                 </li>
                 <li class='nav-item' title='Registro de estudiante' style='color:green'>
-                  <a class='nav-link text-primary btn btn-outline-info' href='/FormEstudiante'>
+                  <a class='nav-link text-primary btn btn-outline-info' href='/FormEstudiante'style='color:green;font-size:12px'>
                     Reg. Estudiante
                   </a>
                 </li>
-                <li class='nav-item' title='Registro nuevo plan curricular' style='color:green'>
-                  <a class='nav-link text-primary btn btn-outline-info' href='/cerrar'>
+                <li class='nav-item' title='Registro nuevo plan curricular' style='color:green'style='color:green;font-size:12px'>
+                  <a class='nav-link text-primary btn btn-outline-info' href='/cerrar'style='color:green;font-size:12px'>
                     Registrar plan de estudio
                   </a>
                 </li>
                 <li class='nav-item' title='Registro nuevo docente' style='color:green'>
-                  <a class='nav-link text-primary btn btn-outline-info' href='/FormDocente'>
+                  <a class='nav-link text-primary btn btn-outline-info' href='/FormDocente'style='color:green;font-size:12px'>
                     Reg. de Docente
                   </a>
                 </li>
                 <li class='nav-item' title='Registro nueva asignatura' style='color:green'>
-                  <a class='nav-link text-primary btn btn-outline-info' href='/FormAsig'>
+                  <a class='nav-link text-primary btn btn-outline-info' href='/FormAsig'style='color:green;font-size:12px'>
                     Reg. Asignatura
                   </a>
                 </li>
 
                 <li class='nav-item' title='Registro de modalidad de titulación' style='color:green'>
-                  <a class='nav-link text-primary btn btn-outline-info' href='/FormModalidad'>
+                  <a class='nav-link text-primary btn btn-outline-info' href='/FormModalidad'style='color:green;font-size:12px'>
                     Reg. modalidad de titulación
                   </a>
                 </li>
-                <li class='nav-item' title='Registro nueva transferencia a otra universidad' style='color:green'>
-                  <a class='nav-link text-primary btn btn-outline-info' href='/FormTranferirO'>
+                <li class='nav-item' title='Registro de nuevo titulado' style='color:green'>
+                  <a class='nav-link text-primary btn btn-outline-info' href='/FormTitulado'style='color:green;font-size:12px'>
+                    Reg. Titulados
+                  </a>
+                </li>
+                <li class='nav-item' title='Registro nueva transferencia a otra universidad' >
+                  <a class='nav-link text-primary btn btn-outline-info' href='/FormTranferirO'style='color:green;font-size:12px'>
                     Reg. transferencia a otra universidad
                   </a>
                 </li>
 
                 <li class='nav-item' title='Registro nueva transferencia de otra universidad' style='color:green'>
-                  <a class='nav-link text-primary btn btn-outline-info' href='/FormTranferirD'>
-                    Reg. transferencia de otras universidades
+                  <a class='nav-link text-primary btn btn-outline-info' href='/FormTranferirD'style='color:green;font-size:12px'>
+                    Reg. transferencia de otra universidade
                   </a>
                 </li>
 
