--- a/templates/menu.html
+++ b/templates/menu.html
@@ -64,6 +64,23 @@
                     Reg. Titulados
                   </a>
                 </li>
+
+                <li class='nav-item' title='Registro de docente que asignaturas dictara' style='color:green'>
+                  <a class='nav-link text-primary btn btn-outline-info' href='/FormDicta'style='color:green;font-size:12px'>
+                    Reg. Docente dicta materias
+                  </a>
+                </li>
+
+                <li class='nav-item' title='Registro de asignatura a llevar por el estudiante' style='color:green'>
+                  <a class='nav-link text-primary btn btn-outline-info' href='/FormAsigEst'style='color:green;font-size:12px'>
+                    Reg. asignaturas del estudiante
+                  </a>
+                </li>
+                <li class='nav-item' title='Registro de calificacion en asiganturas' style='color:green'>
+                  <a class='nav-link text-primary btn btn-outline-info' href='/FormCaliEst'style='color:green;font-size:12px'>
+                    Reg. calificacion de estudiante
+                  </a>
+                </li>
                 <li class='nav-item' title='Registro nueva transferencia a otra universidad' >
                   <a class='nav-link text-primary btn btn-outline-info' href='/FormTranferirO'style='color:green;font-size:12px'>
                     Reg. transferencia a otra universidad
