--- a/templates/registroTitulado.html
+++ b/templates/registroTitulado.html
@@ -94,12 +94,12 @@
         return ;
       }
       var resultado = separar(tipo)
-      cod_mt = resultado[0];
-      cod_pe = resultado[1];
+      var cod_mt = resultado[0];
+      var cod_pe = resultado[1];
       var resultado = separar(estudiante)
-      cod_estudiante = resultado[0];
-      cod_area = resultado[1];
-      cod_carrera = resultado[2];
+      var cod_estudiante = resultado[0];
+      var cod_area = resultado[1];
+      var cod_carrera = resultado[2];
       var datos=new  FormData();
       datos.append("estado",estado);
       datos.append("nota",nota);
